fix(footer):make social icons visible in dark mode

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -74,3 +74,13 @@ $link-color-dark: #42a5f5 !default;
     }
   }
 }
+
+body.colorscheme-dark {
+  @include content_dark();
+}
+
+body.colorscheme-auto {
+  @media (prefers-color-scheme: dark) {
+    @include content_dark();
+  }
+}
